collectors/powershell/tests/replay/contoso/arm/subscriptions_a1a1a1a1-0000-4000-8000-000000000001_providers_Microsoft.Authorization_roleDefinitions.json
{
  "value": [
    {
      "properties": {
        "roleName": "Owner",
        "type": "BuiltInRole",
        "description": "Owner role",
        "assignableScopes": [
          "/"
        ],
        "permissions": [],
        "createdOn": "2015-02-02T21:55:09.8806423Z",
        "updatedOn": "2024-01-01T00:00:00Z",
        "createdBy": null,
        "updatedBy": null
      },
      "id": "/subscriptions/a1a1a1a1-0000-4000-8000-000000000001/providers/Microsoft.Authorization/roleDefinitions/8e3af657-a8ff-443c-a75c-2fe8c4bcb635",
      "type": "Microsoft.Authorization/roleDefinitions",
      "name": "8e3af657-a8ff-443c-a75c-2fe8c4bcb635"
    },
    {
      "properties": {
        "roleName": "Contributor",
        "type": "BuiltInRole",
        "description": "Contributor role",
        "assignableScopes": [
          "/"
        ],
        "permissions": [],
        "createdOn": "2015-02-02T21:55:09.8806423Z",
        "updatedOn": "2024-01-01T00:00:00Z",
        "createdBy": null,
        "updatedBy": null
      },
      "id": "/subscriptions/a1a1a1a1-0000-4000-8000-000000000001/providers/Microsoft.Authorization/roleDefinitions/b24988ac-6180-42a0-ab88-20f7382dd24c",
      "type": "Microsoft.Authorization/roleDefinitions",
      "name": "b24988ac-6180-42a0-ab88-20f7382dd24c"
    },
    {
      "properties": {
        "roleName": "Reader",
        "type": "BuiltInRole",
        "description": "Reader role",
        "assignableScopes": [
          "/"
        ],
        "permissions": [],
        "createdOn": "2015-02-02T21:55:09.8806423Z",
        "updatedOn": "2024-01-01T00:00:00Z",
        "createdBy": null,
        "updatedBy": null
      },
      "id": "/subscriptions/a1a1a1a1-0000-4000-8000-000000000001/providers/Microsoft.Authorization/roleDefinitions/acdd72a7-3385-48ef-bd42-f606fba81ae7",
      "type": "Microsoft.Authorization/roleDefinitions",
      "name": "acdd72a7-3385-48ef-bd42-f606fba81ae7"
    }
  ]
}
